cudo client updates
