# internal/models/attach_storage_disk_response.go
@@ -1,0 +1,11 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+// AttachStorageDiskResponse attach storage disk response
+//
+// swagger:model AttachStorageDiskResponse
+type AttachStorageDiskResponse interface{}
