# swagger/public.swagger.json
@@ -699,10 +699,249 @@
         }
       }
     },
+    "/v1/projects/{projectId}/disk/{id}/attach": {
+      "patch": {
+        "tags": [
+          "Disks"
+        ],
+        "summary": "Attach storage disk to VM",
+        "operationId": "AttachStorageDisk",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "projectId",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "vmId",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/AttachStorageDiskResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        }
+      }
+    },
+    "/v1/projects/{projectId}/disk/{id}/detach": {
+      "put": {
+        "tags": [
+          "Disks"
+        ],
+        "summary": "Detach storage disk from VM",
+        "operationId": "DetachStorageDisk",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "projectId",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/DetachStorageDiskResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        }
+      }
+    },
+    "/v1/projects/{projectId}/disks": {
+      "get": {
+        "tags": [
+          "Disks"
+        ],
+        "summary": "List disks",
+        "operationId": "ListDisks",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "projectId",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "integer",
+            "format": "int32",
+            "name": "pageNumber",
+            "in": "query"
+          },
+          {
+            "type": "integer",
+            "format": "int32",
+            "name": "pageSize",
+            "in": "query"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/ListDisksResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Disks"
+        ],
+        "summary": "Create storage disk",
+        "operationId": "CreateStorageDisk",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "projectId",
+            "in": "path",
+            "required": true
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "dataCenterId": {
+                  "type": "string"
+                },
+                "disk": {
+                  "$ref": "#/definitions/Disk"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/CreateStorageDiskResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        }
+      }
+    },
+    "/v1/projects/{projectId}/disks/{id}": {
+      "get": {
+        "tags": [
+          "Disks"
+        ],
+        "summary": "List disks",
+        "operationId": "GetDisk",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "projectId",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/GetDiskResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Disks"
+        ],
+        "summary": "Delete storage disk",
+        "operationId": "DeleteStorageDisk",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "projectId",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/DeleteStorageDiskResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        }
+      }
+    },
     "/v1/projects/{projectId}/disks/{id}/revert": {
       "post": {
         "tags": [
-          "Virtual Machines"
+          "Disks"
         ],
         "summary": "Revert Disk to Snapshot",
         "operationId": "RevertDisk",
@@ -751,7 +990,7 @@
     "/v1/projects/{projectId}/disks/{id}/snapshots": {
       "get": {
         "tags": [
-          "Virtual Machines"
+          "Disks"
         ],
         "summary": "List Disk Snapshots",
         "operationId": "ListDiskSnapshots",
@@ -786,7 +1025,7 @@
       },
       "post": {
         "tags": [
-          "Virtual Machines"
+          "Disks"
         ],
         "summary": "Create Disk Snapshot",
         "operationId": "CreateDiskSnapshot",
@@ -804,16 +1043,24 @@
             "required": true
           },
           {
-            "type": "string",
-            "name": "snapshotId",
-            "in": "query",
-            "required": true
-          },
-          {
-            "type": "string",
-            "name": "vmId",
-            "in": "query",
-            "required": true
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "required": [
+                "snapshotId",
+                "vmId"
+              ],
+              "properties": {
+                "snapshotId": {
+                  "type": "string"
+                },
+                "vmId": {
+                  "type": "string"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -833,7 +1080,7 @@
       },
       "delete": {
         "tags": [
-          "Virtual Machines"
+          "Disks"
         ],
         "summary": "Delete Disk Snapshots",
         "operationId": "DeleteDiskSnapshot",
@@ -1143,14 +1390,18 @@
               "type": "object",
               "required": [
                 "dataCenterId",
-                "networkId",
-                "cidrPrefix"
+                "id",
+                "cidrPrefix",
+                "networkId"
               ],
               "properties": {
                 "cidrPrefix": {
                   "type": "string"
                 },
                 "dataCenterId": {
+                  "type": "string"
+                },
+                "id": {
                   "type": "string"
                 },
                 "networkId": {
@@ -1334,9 +1585,7 @@
             }
           }
         }
-      }
-    },
-    "/v1/projects/{projectId}/networks/{networkId}": {
+      },
       "delete": {
         "tags": [
           "Networks"
@@ -1352,8 +1601,14 @@
           },
           {
             "type": "string",
-            "name": "networkId",
+            "name": "id",
             "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "networkId",
+            "in": "query",
             "required": true
           }
         ],
@@ -1373,7 +1628,7 @@
         }
       }
     },
-    "/v1/projects/{projectId}/networks/{networkId}/start": {
+    "/v1/projects/{projectId}/networks/{id}/start": {
       "post": {
         "tags": [
           "Networks"
@@ -1389,8 +1644,14 @@
           },
           {
             "type": "string",
-            "name": "networkId",
+            "name": "id",
             "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "networkId",
+            "in": "query",
             "required": true
           }
         ],
@@ -1410,7 +1671,7 @@
         }
       }
     },
-    "/v1/projects/{projectId}/networks/{networkId}/stop": {
+    "/v1/projects/{projectId}/networks/{id}/stop": {
       "post": {
         "tags": [
           "Networks"
@@ -1426,8 +1687,14 @@
           },
           {
             "type": "string",
-            "name": "networkId",
+            "name": "id",
             "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "networkId",
+            "in": "query",
             "required": true
           }
         ],
@@ -1729,6 +1996,43 @@
         }
       }
     },
+    "/v1/projects/{projectId}/vms/{id}/disks": {
+      "get": {
+        "tags": [
+          "Virtual Machines"
+        ],
+        "summary": "List disks attached to VM",
+        "operationId": "ListVMDisks",
+        "parameters": [
+          {
+            "type": "string",
+            "name": "projectId",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "id",
+            "in": "path",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/ListVMDisksResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        }
+      }
+    },
     "/v1/projects/{projectId}/vms/{id}/monitor": {
       "get": {
         "tags": [
@@ -1978,7 +2282,7 @@
             "required": true
           },
           {
-            "name": "body",
+            "name": "securityGroup",
             "in": "body",
             "required": true,
             "schema": {
@@ -1988,25 +2292,20 @@
                 "id"
               ],
               "properties": {
-                "securityGroup": {
-                  "type": "object",
-                  "properties": {
-                    "dataCenterId": {
-                      "type": "string"
-                    },
-                    "description": {
-                      "type": "string"
-                    },
-                    "id": {
-                      "type": "string"
-                    },
-                    "rules": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "$ref": "#/definitions/Rule"
-                      }
-                    }
+                "dataCenterId": {
+                  "type": "string"
+                },
+                "description": {
+                  "type": "string"
+                },
+                "id": {
+                  "type": "string"
+                },
+                "rules": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "$ref": "#/definitions/Rule"
                   }
                 }
               }
@@ -2050,7 +2349,7 @@
             "required": true
           },
           {
-            "name": "body",
+            "name": "securityGroup",
             "in": "body",
             "required": true,
             "schema": {
@@ -2059,22 +2358,17 @@
                 "dataCenterId"
               ],
               "properties": {
-                "securityGroup": {
-                  "type": "object",
-                  "properties": {
-                    "dataCenterId": {
-                      "type": "string"
-                    },
-                    "description": {
-                      "type": "string"
-                    },
-                    "rules": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "$ref": "#/definitions/Rule"
-                      }
-                    }
+                "dataCenterId": {
+                  "type": "string"
+                },
+                "description": {
+                  "type": "string"
+                },
+                "rules": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "$ref": "#/definitions/Rule"
                   }
                 }
               }
@@ -2427,6 +2721,9 @@
         }
       }
     },
+    "AttachStorageDiskResponse": {
+      "type": "object"
+    },
     "ConnectVMResponse": {
       "type": "object",
       "required": [
@@ -2498,6 +2795,9 @@
           "$ref": "#/definitions/SecurityGroup"
         }
       }
+    },
+    "CreateStorageDiskResponse": {
+      "type": "object"
     },
     "CreateVMRequest.NIC": {
       "type": "object",
@@ -2599,11 +2899,50 @@
     "DeleteSecurityGroupResponse": {
       "type": "object"
     },
+    "DeleteStorageDiskResponse": {
+      "type": "object"
+    },
+    "DetachStorageDiskResponse": {
+      "type": "object"
+    },
     "Disk": {
       "type": "object",
+      "required": [
+        "id",
+        "sizeGib"
+      ],
       "properties": {
+        "createTime": {
+          "type": "string",
+          "format": "date-time",
+          "readOnly": true
+        },
+        "dataCenterId": {
+          "type": "string",
+          "readOnly": true
+        },
+        "diskState": {
+          "type": "string",
+          "readOnly": true
+        },
+        "diskType": {
+          "$ref": "#/definitions/DiskType",
+          "readOnly": true
+        },
         "id": {
           "type": "string"
+        },
+        "privateImageId": {
+          "type": "string",
+          "readOnly": true
+        },
+        "projectId": {
+          "type": "string",
+          "readOnly": true
+        },
+        "publicImageId": {
+          "type": "string",
+          "readOnly": true
         },
         "sizeGib": {
           "type": "integer",
@@ -2611,8 +2950,21 @@
         },
         "storageClass": {
           "$ref": "#/definitions/StorageClass"
+        },
+        "vmId": {
+          "type": "string",
+          "readOnly": true
         }
       }
+    },
+    "DiskType": {
+      "type": "string",
+      "default": "DISK_TYPE_UNKNOWN",
+      "enum": [
+        "DISK_TYPE_UNKNOWN",
+        "DISK_TYPE_BOOT",
+        "DISK_TYPE_STORAGE"
+      ]
     },
     "GenerateApiKeyRequest": {
       "type": "object",
@@ -2623,6 +2975,21 @@
         "apikeyId": {
           "description": "The identifier to use for the api key, which will become the final component of\nthe api key's resource name.\nThis value should be 4-63 characters, and valid characters\nare /[a-z][0-9]-/.",
           "type": "string"
+        }
+      }
+    },
+    "GetDiskResponse": {
+      "type": "object",
+      "properties": {
+        "disk": {
+          "$ref": "#/definitions/Disk"
+        },
+        "snapshots": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/Snapshot"
+          }
         }
       }
     },
@@ -2843,6 +3210,18 @@
           "items": {
             "type": "object",
             "$ref": "#/definitions/Snapshot"
+          }
+        }
+      }
+    },
+    "ListDisksResponse": {
+      "type": "object",
+      "properties": {
+        "disks": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/Disk"
           }
         }
       }
@@ -3098,6 +3477,18 @@
           "items": {
             "type": "object",
             "$ref": "#/definitions/DataCenter"
+          }
+        }
+      }
+    },
+    "ListVMDisksResponse": {
+      "type": "object",
+      "properties": {
+        "disks": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/Disk"
           }
         }
       }
